Move non transformer code out of AssessmentDto (#93)
* Move non transformer code out of AssessmentDto

* Move non transformer code out of AssessmentDto

* DTO tests passing

* more DTO tests

* service tests

* complex assessment service tests

* Smoke test testing

* remove deprecated

* add missing dep

* feedback drop 1

* feedback drop 2

Co-authored-by: nickmcmahon01 <nick.mcmahon@digital.justice.gov.uk>